<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Handwriting</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="send_button">Send</string>
    <string name="save_picture_button">Save picture</string>
    <string name="size_title">Size :</string>
    <string name="color_title">Color :</string>
    <string name="message_length"> %1$d / %2$d </string>

    <string-array name="colors_array">
        <item>Azure</item>
        <item>Green</item>
        <item>Grey</item>
        <item>Black</item>
    </string-array>
    <string-array name="size_array">
        <item>Small</item>
        <item>Normal</item>
        <item>Big</item>
    </string-array>

</resources>
